maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: not found: type break
      loop:break
           ^ShortestPathMaze:9: error: not found: value loop
      loop:break
      ^ShortestPathMaze:12: error: value unary_! is not a member of Unit
  while(!isGridFull){
        ^ShortestPathMaze:39: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^ShortestPathMaze:39: warning: enclosing method isGridFull has result type Unit: return value discarded
      return false
      ^ShortestPathMaze:42: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^ShortestPathMaze:42: warning: enclosing method isGridFull has result type Unit: return value discarded
  return true
  ^